# Biblioteca-Virtual

./: index.html  package.json
.github/workflows/: build.yml
app/: index.html
biblioteca-virtual-actualizacion/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
