[package]
name = "biblioteca-virtual"
version = "1.0.0"
description = "Biblioteca virtual para organizar y consultar libros digitales (PDF) como en una estantería real"
authors = ["Gabriel Da Costa Porto Luzardo"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "biblioteca_virtual_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
